Actualizar un plato
