# backend/routes/routes_handler.go
@@ -17,6 +17,12 @@ func Routes(router *gin.Engine) {
 	})
 
 	router.POST("/webhook", controllers.ReceiveWebhook)
+
 	router.GET("/orders", controllers.GetCurrentOrders)
 	router.GET("/orders/:id", controllers.GetOrderById)
+
+	kitchen := router.Group("/kitchen")
+	{
+		kitchen.PUT("/orders/items", controllers.UpdateItemReady)
+	}
 }
